<resources>
    <string name="app_name">bof_group_28</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">Start</string>
    <string name="birds_of_a_feather">Birds of a Feather</string>
    <string name="clear">Clear</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>


</resources>